--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using RaceDayCompanion
 @using RaceDayCompanion.Components
+@using RaceDayCompanion.Components.HelperClasses
